test/TestPhases/typechecker/invalid/NoMagicCasting4.blc
module

function noMagicCasting()
    var a: float64 = -128

    var c: float32 = a
end

